; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_ZipAddRealFileW.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_ZipAddRealFileW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ZipAddRealFileW(i32* %0, i8* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %22, label %15

15:                                               ; preds = %5
  %16 = load i8*, i8** %8, align 8
  %17 = call i64 @IsEmptyStr(i8* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %15
  %20 = load i32*, i32** %11, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %19, %15, %5
  store i32 0, i32* %6, align 4
  br label %43

23:                                               ; preds = %19
  %24 = load i32*, i32** %11, align 8
  %25 = call %struct.TYPE_4__* @ReadDumpW(i32* %24)
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %12, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %27 = icmp eq %struct.TYPE_4__* %26, null
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i32 0, i32* %6, align 4
  br label %43

29:                                               ; preds = %23
  %30 = load i32*, i32** %7, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* %10, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @ZipAddFileSimple(i32* %30, i8* %31, i32 %32, i32 %33, i32 %36, i32 %39)
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %42 = call i32 @FreeBuf(%struct.TYPE_4__* %41)
  store i32 1, i32* %6, align 4
  br label %43

43:                                               ; preds = %29, %28, %22
  %44 = load i32, i32* %6, align 4
  ret i32 %44
}

declare dso_local i64 @IsEmptyStr(i8*) #1

declare dso_local %struct.TYPE_4__* @ReadDumpW(i32*) #1

declare dso_local i32 @ZipAddFileSimple(i32*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @FreeBuf(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
